--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ body {
   color: #767676;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 /* ------------------------------------------------------------------- 
@@ -1126,6 +1127,7 @@ h1.intro-header::before {
 
 #header {
   width: 100%;
+  max-width: 100vw;
   height: 72px;
   background-color: #111111;
   position: fixed;
@@ -1134,6 +1136,8 @@ h1.intro-header::before {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   z-index: 501;
+  overflow: hidden;
+  min-width: 320px;
 }
 
 /* ------------------------------------------------------------------- 
@@ -1158,15 +1162,16 @@ h1.intro-header::before {
   padding: 0;
   outline: 0;
   border: none;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   background: url("../images/logo.jpg") no-repeat center;
-  background-size: 80px 80px;
+  background-size: cover;
   font: 0/0 a;
   text-shadow: none;
   color: transparent;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
+  border-radius: 0;
 }
 
 /* ------------------------------------------------------------------- 
@@ -1188,6 +1193,7 @@ h1.intro-header::before {
   color: rgba(255, 255, 255, 0.5);
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  z-index: 502;
 }
 
 .header-menu-toggle:hover,
@@ -1326,9 +1332,9 @@ h1.intro-header::before {
 
 @media only screen and (max-width: 768px) {
   .header-logo a {
-    width: 88px;
-    height: 20px;
-    background-size: 88px 20px;
+    width: 50px;
+    height: 50px;
+    background-size: cover;
   }
   #header-nav-wrap {
     display: none;
@@ -1370,11 +1376,29 @@ h1.intro-header::before {
     display: block;
     padding: 0 20px;
   }
+
+  .header-menu-toggle {
+    right: 15px;
+  }
+
+  .header-logo {
+    left: 15px;
+  }
 }
 
 @media only screen and (max-width: 400px) {
   .header-menu-toggle {
-    right: 24px;
+    right: 20px;
+  }
+
+  .header-logo a {
+    width: 45px;
+    height: 45px;
+    background-size: cover;
+  }
+
+  .header-logo {
+    left: 20px;
   }
 }
 
@@ -1770,11 +1794,53 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
   .home-content-left h1 {
     font-size: 3.6rem;
   }
+
+  /* Réduire les paddings sur mobile */
+  .home-content-left {
+    padding: 8rem 3rem 366px;
+  }
+  #about {
+    padding-top: 8rem;
+  }
+  .about-intro {
+    padding-bottom: 3rem;
+  }
+  .about-how {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+  #pricing {
+    padding-top: 8rem;
+    padding-bottom: 6rem;
+  }
+  #testimonials {
+    padding: 8rem 0 5rem;
+  }
+  #download {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+  footer {
+    padding-top: 5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  /* Réduire les paddings dans about */
+  .about-intro {
+    padding-bottom: 2rem;
+  }
+  .about-features .features-list {
+    padding-top: 1.5rem;
+  }
+  .about-how {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+  }
 }
 
 @media only screen and (max-width: 600px) {
   .home-content-left {
-    padding: 12rem 6rem 366px;
+    padding: 6rem 4rem 366px;
   }
   .home-content-left h1 {
     font-size: 3.3rem;
@@ -1790,6 +1856,45 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
   }
   .scroll-icon {
     top: 21px;
+  }
+
+  /* Réduire encore plus les paddings sur petits écrans */
+  #about {
+    padding-top: 6rem;
+  }
+  .about-intro {
+    padding-bottom: 2rem;
+  }
+  .about-how {
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+  }
+  #pricing {
+    padding-top: 6rem;
+    padding-bottom: 4rem;
+  }
+  #testimonials {
+    padding: 6rem 0 4rem;
+  }
+  #download {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+  footer {
+    padding-top: 4rem;
+    padding-bottom: 2rem;
+  }
+
+  /* Réduire encore plus les paddings dans about */
+  .about-intro {
+    padding-bottom: 1.5rem;
+  }
+  .about-features .features-list {
+    padding-top: 1rem;
+  }
+  .about-how {
+    padding-top: 2rem;
+    padding-bottom: 1.5rem;
   }
 }
 
@@ -1809,7 +1914,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 
 @media only screen and (max-width: 400px) {
   .home-content-left {
-    padding: 12rem 0 300px;
+    padding: 4rem 0 300px;
   }
   .home-content-left .button.stroke {
     margin: 0 0 1.2rem 0;
@@ -1817,6 +1922,45 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
   .home-image-right {
     width: 320px;
     margin-bottom: -298px;
+  }
+
+  /* Réduire au maximum les paddings sur très petits écrans */
+  #about {
+    padding-top: 5rem;
+  }
+  .about-intro {
+    padding-bottom: 1.5rem;
+  }
+  .about-how {
+    padding-top: 2rem;
+    padding-bottom: 1.5rem;
+  }
+  #pricing {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+  #testimonials {
+    padding: 4rem 0 3rem;
+  }
+  #download {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+  footer {
+    padding-top: 3rem;
+    padding-bottom: 1.5rem;
+  }
+
+  /* Réduire au maximum les paddings dans about */
+  .about-intro {
+    padding-bottom: 1rem;
+  }
+  .about-features .features-list {
+    padding-top: 1rem;
+  }
+  .about-how {
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
   }
 }
 
@@ -1828,7 +1972,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 #about {
   min-height: 786px;
   background: #ffffff;
-  padding-top: 18rem;
+  padding-top: 8rem;
   overflow: hidden;
 }
 
@@ -1837,15 +1981,15 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 }
 
 .about-features .features-list {
-  padding-top: 5.4rem;
+  padding-top: 2rem;
 }
 
 .about-features .feature {
-  margin-bottom: 1.8rem;
+  margin-bottom: 1.2rem;
 }
 
 .about-features .feature .icon {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   display: inline-block;
 }
 
@@ -1858,7 +2002,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
   font-family: "montserrat-regular", sans-serif;
   font-size: 1.9rem;
   color: #151515;
-  margin-bottom: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 .about-how {
@@ -2003,6 +2147,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
   }
   .about-features .feature h3 {
     font-size: 1.8rem;
+    margin-bottom: 1.2rem;
   }
   .about-how h3 {
     font-size: 1.9rem;
@@ -2037,7 +2182,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
     margin-bottom: 4.5rem;
   }
   .about-features .feature h3 {
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.8rem;
   }
 }
 
@@ -2095,9 +2240,10 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 .pricing-table .plan-block {
   background: #ffffff;
   border-radius: 5px;
-  padding: 4.8rem 4rem 5.4rem;
+  padding: 4.8rem 2rem 5.4rem;
   margin-bottom: 4.8rem;
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -2138,7 +2284,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 
 .pricing-table .plan-block .plan-block-features {
   list-style: none;
-  margin: 0 2rem 4.2rem;
+  margin: 0 1rem 4.2rem;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 1.6rem;
   line-height: 2.4rem;
@@ -2243,6 +2389,25 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
   .pricing-table .plan-bottom-part {
     width: 58.33333%;
   }
+
+  /* Réduire les paddings pour éviter le scroll horizontal */
+  .pricing-table .plan-block {
+    padding: 2.5rem 1rem 3rem;
+  }
+  .pricing-table .plan-block .plan-block-features {
+    margin: 0 0.5rem 2rem;
+  }
+  .pricing-table .plan-block .plan-block-title {
+    font-size: 2rem;
+    margin-bottom: 2.5rem;
+  }
+  .pricing-table .plan-block .plan-block-price {
+    font-size: 6rem;
+  }
+  .pricing-table .plan-block .plan-block-price sup {
+    font-size: 2.5rem;
+    top: -2.5rem;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -2256,6 +2421,25 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
     clear: both !important;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  /* Réduire encore plus pour les très petits écrans */
+  .pricing-table .plan-block {
+    padding: 2rem 0.5rem 2.5rem;
+  }
+  .pricing-table .plan-block .plan-block-features {
+    margin: 0 0.25rem 1.5rem;
+  }
+  .pricing-table .plan-block .plan-block-title {
+    font-size: 1.8rem;
+    margin-bottom: 2rem;
+  }
+  .pricing-table .plan-block .plan-block-price {
+    font-size: 5rem;
+  }
+  .pricing-table .plan-block .plan-block-price sup {
+    font-size: 2rem;
+    top: -2rem;
   }
 }
 
@@ -2586,8 +2770,8 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 
 @media only screen and (max-width: 768px) {
   .coming-soon-message {
-    padding: 2rem;
-    margin-top: 2rem;
+    padding: 1rem;
+    margin-top: 1rem;
   }
 
   .coming-soon-message p {
@@ -2988,12 +3172,13 @@ footer ul a:visited {
 
 .footer-social-links {
   margin-top: 2rem;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
 .footer-social-links a {
   display: inline-block;
-  margin: 0 1rem;
+  margin: 0 1.5rem;
   font-size: 2.4rem;
   color: rgba(255, 255, 255, 0.7);
   transition: all 0.3s ease;
@@ -3020,11 +3205,11 @@ footer ul a:visited {
 @media only screen and (max-width: 768px) {
   .footer-main .row {
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.5rem;
   }
 
   .footer-main .col-four {
-    padding: 2rem 1.5rem;
+    padding: 1rem 0.5rem;
   }
 
   .footer-contact {
@@ -3046,12 +3231,13 @@ footer ul a:visited {
 
   .footer-social-links {
     margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
     text-align: center;
   }
 
   .footer-social-links a {
     font-size: 2rem;
-    margin: 0 0.8rem;
+    margin: 0 1.2rem;
   }
 
   .footer-logo-center {
@@ -3079,7 +3265,7 @@ footer ul a:visited {
 
 @media only screen and (max-width: 600px) {
   .footer-logo-center {
-    padding: 1.5rem 0;
+    padding: 1rem 0;
   }
 
   .footer-logo-center img {
@@ -3098,6 +3284,15 @@ footer ul a:visited {
   .footer-contact p,
   .footer-subscribe p {
     font-size: 1.3rem;
+  }
+
+  .footer-main .col-four {
+    padding: 0.5rem 0.25rem;
+  }
+
+  .footer-social-links a {
+    font-size: 1.8rem;
+    margin: 0 1rem;
   }
 }
 
