--- a/css/main.css
+++ b/css/main.css
@@ -1533,7 +1533,8 @@ h1.intro-header::before {
 
 .home-image-right img {
   vertical-align: bottom;
-  width: 75%;
+  width: 150% !important;
+  max-width: unset !important;
 }
 
 /* home social-list */
@@ -1692,7 +1693,7 @@ html[data-useragent*="MSIE 10.0"] .home-scrolldown,
 
 @media only screen and (max-width: 1300px) {
   .home-image-right {
-    right: 5rem;
+    right: 10rem;
   }
 }
 
@@ -3302,7 +3303,7 @@ footer ul a:visited {
 }
 
 #mc_embed_signup {
-  background: #fff !important;
+  background: transparent !important;
   clear: left !important;
   font: 14px Helvetica, Arial, sans-serif !important;
   width: 100% !important;
@@ -3314,7 +3315,7 @@ footer ul a:visited {
 }
 
 #mc_embed_signup h2 {
-  color: #333 !important;
+  color: #ffffff !important;
   font-size: 18px !important;
   margin-bottom: 15px !important;
   text-align: center !important;
@@ -3342,7 +3343,7 @@ footer ul a:visited {
 
 #mc_embed_signup .mc-field-group label {
   display: block !important;
-  color: #333 !important;
+  color: #ffffff !important;
   font-size: 14px !important;
   margin-bottom: 5px !important;
   font-weight: normal !important;
@@ -3417,3 +3418,9 @@ footer ul a:visited {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+.social-links-download {
+  a {
+    margin: 1rem !important;
+  }
+}
