--- a/css/main.css
+++ b/css/main.css
@@ -1164,7 +1164,7 @@ h1.intro-header::before {
   border: none;
   width: 60px;
   height: 60px;
-  background: url("../images/logo.jpg") no-repeat center;
+  background: url("../images/logo-pdo.png") no-repeat center;
   background-size: cover;
   font: 0/0 a;
   text-shadow: none;
@@ -1533,7 +1533,7 @@ h1.intro-header::before {
 
 .home-image-right img {
   vertical-align: bottom;
-  width: 150% !important;
+  width: 50% !important;
   max-width: unset !important;
 }
 
@@ -3196,10 +3196,6 @@ footer ul a:visited {
 
 .footer-social-links .fa-music:hover {
   color: #000000;
-}
-
-.footer-social-links .fa-twitter:hover {
-  color: #1da1f2;
 }
 
 /* Responsive adjustments for footer */
